# ISC22-Incompact3d

./: .gitignore  CMakeLists.txt
decomp2d/: CMakeLists.txt  decomp_2d.f90  transpose_x_to_y.inc  transpose_y_to_x.inc  transpose_y_to_z.inc  transpose_z_to_y.inc
src/: BC-Channel-flow.f90  BC-Cylinder.f90  BC-Jet.f90  BC-Lock-exchange.f90  BC-Mixing-layer.f90  BC-Periodic-hill.f90  BC-TBL.f90  BC-TGV.f90  BC-User.f90  CMakeLists.txt  filters.f90  genepsi3d.f90  ibm.f90  navier.f90  parameters.f90  poisson.f90  probes.f90  schemes.f90  time_integrators.f90  transeq.f90  variables.f90  xcompact3d.f90
